# Warframe-Damage-System

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  README.txt  WarframeDamageSystem.cpp
data/: Mod File Paths.txt
data/Lotus/Upgrades/Arcanes/Primary/: PrimaryDeadhead.txt
data/Lotus/Upgrades/Mods/Rifle/: WeaponCritChanceMod.txt  WeaponDamageAmountMod.txt
data/Lotus/Upgrades/Mods/Rifle/DualStat/: CorruptedCritRateFireRateRifle.txt
data/Lotus/Upgrades/Mods/Shotgun/Expert/: WeaponFreezeDamageModExpert.txt
data/Mods/: Mod Data Structure.txt  Mod functionality bytecode examples.txt  ModData.txt
data/Weapons/: Mk1-Braton.txt  Weapon data structure.txt
include/: CMakeLists.txt
include/Weapons/: Weapon.h
src/: CMakeLists.txt
src/DamagePipeline/: CMakeLists.txt  DamageInstance.cpp  DamageInstance.h  DamageInstanceModEffectInterface.h  DamagePipeline.cpp  DamagePipeline.h  DamageValue.cpp  DamageValue.h  FireInstance.cpp  FireInstance.h  FlaggedVariable.h  IDamageInstance.h  ModProcessingFunctions.cpp  ModProcessingFunctions.h
src/DamagePipeline/ArmourProcess/: ArmourProcess.cpp  ArmourProcess.h  CMakeLists.txt
src/DamagePipeline/BaseDamageProcess/: BaseDamageProcess.cpp  BaseDamageProcess.h  CMakeLists.txt
src/DamagePipeline/ConditionOverloadProcess/: CMakeLists.txt  ConditionOverloadProcess.cpp  ConditionOverloadProcess.h
src/DamagePipeline/CriticalHitProcess/: CMakeLists.txt  CriticalHitProcess.cpp  CriticalHitProcess.h
src/DamagePipeline/ExtraDamageMultipliers/: CMakeLists.txt  ExtraDamageMultipliers.cpp  ExtraDamageMultipliers.h
src/DamagePipeline/FactionDamageProcess/: CMakeLists.txt  FactionDamageProcess.cpp  FactionDamageProcess.h
src/DamagePipeline/HealthResistanceProcess/: CMakeLists.txt  HealthResistanceProcess.cpp  HealthResistanceProcess.h
src/DamagePipeline/HitZoneProcess/: CMakeLists.txt  HitZoneProcess.cpp  HitZoneProcess.h
src/DamagePipeline/MultishotProcess/: CMakeLists.txt  MultishotProcess.cpp  MultishotProcess.h
src/DamagePipeline/NetworkQuantisationProcess/: CMakeLists.txt  NetworkQuantisation.cpp  NetworkQuantisation.h
src/DamagePipeline/StatusChanceProcess/: CMakeLists.txt  StatusChanceProcess.cpp  StatusChanceProcess.h
src/DatabaseManagement/: CMakeLists.txt  DatabaseManipulationFunctions.cpp  DatabaseManipulationFunctions.h  DatabaseRetrievalFunctions.cpp  DatabaseRetrievalFunctions.h
src/Mods/: CMakeLists.txt  IModEffect.h  IModManager.h  ModBase.cpp  ModBase.h  ModBaseDrain.cpp  ModBaseDrain.h  ModEffectBase.cpp  ModEffectBase.h  ModFactory.cpp  ModFactory.h  ModFusionLimit.cpp  ModFusionLimit.h  ModManager.cpp  ModManager.h  ModManagerInterface.h  ModOperationType.cpp  ModOperationType.h  ModPolarity.cpp  ModPolarity.h  ModSlotType.h  ModUpgradeType.cpp  ModUpgradeType.h
src/Mods/ModEffects/: CMakeLists.txt  ConditionalEnum.h  ConditionalModEffectWrapper.cpp  ConditionalModEffectWrapper.h  ConditionalOverrideManager.cpp  ConditionalOverrideManager.h  ConstantModEffect.cpp  ConstantModEffect.h  FactionModEffect.cpp  FactionModEffect.h  IModEffectWrapper.cpp  IModEffectWrapper.h  ISinglePurposeModEffect.cpp  ISinglePurposeModEffect.h  ModEffect.cpp  ModEffect.h  ProbabilityModEffectWrapper.cpp  ProbabilityModEffectWrapper.h  WeaponDamageIfVictimProcActiveModEffect.cpp  WeaponDamageIfVictimProcActiveModEffect.h
src/NetworkProcess/: NetworkQuantisation.h
src/Services/: CMakeLists.txt  IService.h  ServiceLocator.cpp  ServiceLocator.h
src/Services/Logging/: CMakeLists.txt  ILogService.h  LogService.cpp  LogService.h  LoggerServiceBase.h  NullLogService.h
src/Services/RNG/: CMakeLists.txt  IRNGService.h  NullRNGService.h  RNGService.cpp  RNGService.h  RNGServiceBase.h
src/Warframe/: CMakeLists.txt  Warframe.cpp  Warframe.h
src/Warframe/Buffs/: Buff.cpp  Buff.h  BuffWithStacks.h  CMakeLists.txt
src/Weapons/: AttackData.cpp  AttackData.h  CMakeLists.txt  DamageType.cpp  DamageType.h  FiringMode.cpp  FiringMode.h  IWeapon.h  ProcType.cpp  ProcType.h  StatusEffect.cpp  StatusEffect.h  Weapon.cpp  Weapon.h  WeaponData.cpp  WeaponData.h  WeaponFactory.cpp  WeaponFactory.h  WeaponFireFunctions.cpp  WeaponFireFunctions.h
src/Weapons/FiringModeImpl/: AttackData.cpp  AttackData.h  CMakeLists.txt  DamageData.cpp  DamageData.h  HitType.h
src/Weapons/Incarnon/: CMakeLists.txt  Incarnon.cpp  Incarnon.h
src/WeaponsReworked/: CMakeLists.txt  FiringMode.cpp  FiringMode.h  Weapon.cpp  Weapon.h  WeaponData.cpp  WeaponData.h
src/WeaponsReworked/FiringModeImpl/: AttackType.h  CMakeLists.txt  DamageData.cpp  DamageData.h  FireBehaviour.h  ImpactBehaviour.h  StateBehaviour.h
tests/: BaseDamage.test.cpp  CMakeLists.txt  DamageTypeComposition.test.cpp  ModEnumStringParse.test.cpp  ModFactory.test.cpp  Output.Test.cpp  ProbabilityModEffectWrapper.test.cpp  RNG.Test.cpp  RNGServiceLocator.test.cpp  StatusEffectConversion.test.cpp
